Added "branch=master" to .gitmodules so that we'll always get the best czarchat.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,5 @@
 [submodule "czarchat"]
 	path = czarchat
 	url = https://gitlab.com/grahac/czarchat.git
+  branch = master
 	fetchRecurseSubmodules = true
